2.0.6/_sources/plugins/available/composition/ancom.txt
ancom: Apply ANCOM to identify features that differ in abundance.
=================================================================

Apply Analysis of Composition of Microbiomes (ANCOM) to identify features that are differentially abundant across groups.

.. raw:: html

   <table class="table action-signature">
     
     <thead>
       <tr>
         <th colspan="3">Inputs</th>
       </tr>
       
       <tr>
         <th>Name</th>
         <th>Type</th>
         <th>Default</th>
       </tr>
       
     </thead>
     <tbody>
       
       <tr>
         
         <td>
           <code class="docutils literal">
             <span class="pre">table</span>
           </code>
         </td>
         
         <td>
           <code class="docutils literal">
             <span class="pre">FeatureTable[Composition]</span>
           </code>
         </td>
         
         <td>
           <code class="docutils literal">
             <span class="pre">Required</span>
           </code>
         </td>
         
       </tr>
       
     </tbody>
     
     <thead>
       <tr>
         <th colspan="3">Parameters</th>
       </tr>
       
       <tr>
         <th>Name</th>
         <th>Type</th>
         <th>Default</th>
       </tr>
       
     </thead>
     <tbody>
       
       <tr>
         
         <td>
           <code class="docutils literal">
             <span class="pre">metadata</span>
           </code>
         </td>
         
         <td>
           <code class="docutils literal">
             <span class="pre">MetadataCategory</span>
           </code>
         </td>
         
         <td>
           <code class="docutils literal">
             <span class="pre">Required</span>
           </code>
         </td>
         
       </tr>
       
       <tr>
         
         <td>
           <code class="docutils literal">
             <span class="pre">statistical_test</span>
           </code>
         </td>
         
         <td>
           <code class="docutils literal">
             <span class="pre">Str % Choices({'chisquare', 'f_oneway', 'friedmanchisquare', 'kruskal', 'kstest', 'mannwhitneyu', 'ttest_ind', 'ttest_rel', 'wilcoxon'})</span>
           </code>
         </td>
         
         <td>
           <code class="docutils literal">
             <span class="pre">f_oneway</span>
           </code>
         </td>
         
       </tr>
       
       <tr>
         
         <td>
           <code class="docutils literal">
             <span class="pre">transform_function</span>
           </code>
         </td>
         
         <td>
           <code class="docutils literal">
             <span class="pre">Str % Choices({'clr', 'log', 'sqrt'})</span>
           </code>
         </td>
         
         <td>
           <code class="docutils literal">
             <span class="pre">clr</span>
           </code>
         </td>
         
       </tr>
       
     </tbody>
     
     <thead>
       <tr>
         <th colspan="3">Outputs</th>
       </tr>
       
       <tr>
         <th>Name</th>
         <th>Type</th>
         <th>Default</th>
       </tr>
       
     </thead>
     <tbody>
       
       <tr>
         
         <td>
           <code class="docutils literal">
             <span class="pre">visualization</span>
           </code>
         </td>
         
         <td>
           <code class="docutils literal">
             <span class="pre">Visualization</span>
           </code>
         </td>
         
         <td>
           <code class="docutils literal">
             <span class="pre">N/A</span>
           </code>
         </td>
         
       </tr>
       
     </tbody>
     
   </table>