2017.7/_sources/plugins/available/composition/ancom.txt
ancom: Apply ANCOM to identify features that differ in abundance.
=================================================================

Apply Analysis of Composition of Microbiomes (ANCOM) to identify features that are differentially abundant across groups.

.. raw:: html

   <table class="table action-signature">
     
     <thead>
       <tr>
         <th colspan="4">Inputs</th>
       </tr>
       
       <tr>
         <th>Name</th>
         <th>Type</th>
         <th>Default</th>
         <th>Description</th>
       </tr>
       
     </thead>
     <tbody>
       
       <tr>
         
         <td>
           <code class="docutils literal">
             <span class="pre">table</span>
           </code>
         </td>
         
         <td>
           <code class="docutils literal">
             <span class="pre">FeatureTable[Composition]</span>
           </code>
         </td>
         
         <td>
           <code class="docutils literal">
             <span class="pre">Required</span>
           </code>
         </td>
         
         <td>
           
           The feature table to be used for ANCOM computation.<br/>
           
         </td>
       </tr>
       
     </tbody>
     
     <thead>
       <tr>
         <th colspan="4">Parameters</th>
       </tr>
       
       <tr>
         <th>Name</th>
         <th>Type</th>
         <th>Default</th>
         <th>Description</th>
       </tr>
       
     </thead>
     <tbody>
       
       <tr>
         
         <td>
           <code class="docutils literal">
             <span class="pre">metadata</span>
           </code>
         </td>
         
         <td>
           <code class="docutils literal">
             <span class="pre">MetadataCategory</span>
           </code>
         </td>
         
         <td>
           <code class="docutils literal">
             <span class="pre">Required</span>
           </code>
         </td>
         
         <td>
           
           The sample metadata category to test for differential abundance across.<br/>
           
         </td>
       </tr>
       
       <tr>
         
         <td>
           <code class="docutils literal">
             <span class="pre">statistical_test</span>
           </code>
         </td>
         
         <td>
           <code class="docutils literal">
             <span class="pre">Str % Choices({'chisquare', 'f_oneway', 'friedmanchisquare', 'kruskal', 'kstest', 'mannwhitneyu', 'ttest_ind', 'ttest_rel', 'wilcoxon'})</span>
           </code>
         </td>
         
         <td>
           <code class="docutils literal">
             <span class="pre">f_oneway</span>
           </code>
         </td>
         
         <td>
           
           The test to be applied to detect differential abundance across groups.<br/>
           
         </td>
       </tr>
       
       <tr>
         
         <td>
           <code class="docutils literal">
             <span class="pre">transform_function</span>
           </code>
         </td>
         
         <td>
           <code class="docutils literal">
             <span class="pre">Str % Choices({'clr', 'log', 'sqrt'})</span>
           </code>
         </td>
         
         <td>
           <code class="docutils literal">
             <span class="pre">clr</span>
           </code>
         </td>
         
         <td>
           
           The method applied to transform feature values before generating volcano plots.<br/>
           
         </td>
       </tr>
       
       <tr>
         
         <td>
           <code class="docutils literal">
             <span class="pre">difference_function</span>
           </code>
         </td>
         
         <td>
           <code class="docutils literal">
             <span class="pre">Str % Choices({'f_statistic', 'mean_difference'})</span>
           </code>
         </td>
         
         <td>
           <code class="docutils literal">
             <span class="pre">None</span>
           </code>
         </td>
         
         <td>
           
           The method applied to visualize fold difference in feature abundances across groups for volcano plots.<br/>
           
         </td>
       </tr>
       
     </tbody>
     
     <thead>
       <tr>
         <th colspan="4">Outputs</th>
       </tr>
       
       <tr>
         <th>Name</th>
         <th>Type</th>
         <th>Default</th>
         <th>Description</th>
       </tr>
       
     </thead>
     <tbody>
       
       <tr>
         
         <td>
           <code class="docutils literal">
             <span class="pre">visualization</span>
           </code>
         </td>
         
         <td>
           <code class="docutils literal">
             <span class="pre">Visualization</span>
           </code>
         </td>
         
         <td>
           <code class="docutils literal">
             <span class="pre">N/A</span>
           </code>
         </td>
         
         <td>
           
           No description<br/>
           
         </td>
       </tr>
       
     </tbody>
     
   </table>